fix filters__container wrapping and order

--- a/public/css/scss/components/_filters.scss
+++ b/public/css/scss/components/_filters.scss
@@ -2,17 +2,6 @@
          FILTERS
 \*---------------------- */
 
-.filters{
-  display: flex;
-  height: auto;
-  margin-bottom: 20px;
-  &--default{
-    order: 2;
-  }
-  &--selected{
-    order: 1;
-  }
-}
 .filter{
   position: relative;
   width: 170px;
@@ -127,6 +116,7 @@
     align-items: center;
     width: 110px;
     height: 40px;
+    margin: 7px;
     & .filter__icon::before{
       margin-left: 10px;
       content: "\f057";
