--- a/public/css/scss/layout/_container.scss
+++ b/public/css/scss/layout/_container.scss
@@ -21,5 +21,6 @@
   }
   &--selected{
     order: 1;
+    flex-wrap: wrap;
   }
 }
